[package]
name = "heapsize_derive"
version = "0.1.4"
authors = ["The Servo Project Developers"]
description = "Automatically generating infrastructure for measuring the total runtime size of an object on the heap"
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/heapsize"

[lib]
path = "lib.rs"
proc-macro = true

[[test]]
name = "test"
path = "test.rs"

[dependencies]
syn = {version="0.11",registry="susytech"}
quote = {version"0.3",registry="susytech"}
synstructure = {version="0.5",registry="susytech"}
